<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OnPaw</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="settings">Settings</string>
    <string name="user_icon">User Icon</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="home_address">Home Address:</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_back">Go Back</string>
    <string name="reset">Reset</string>
    <string name="paw">Paw</string>
    <string name="looks_a_little_empty_here_ntry_adding_some_pets">Looks a little empty here…\nTry adding some pets!</string>
    <string name="add_pet_profile">Add pet profile</string>
    <string name="pet_profiles">Pet Profiles</string>
    <string name="back_button">Back button</string>
    <string name="pet_icon">Pet Icon</string>
    <string name="profile">Profile</string>
    <string name="enter_pet_name">Enter pet name</string>
    <string name="species">Species:</string>
    <string name="age">Age (years):</string>
    <string name="pet_age">Pet age</string>
    <string name="note">Note:</string>
    <string name="enter_a_note">Enter a note…</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="enter_pet_species">Enter pet species</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_message">Welcome to OnPaw!\nYour trusted pet sitting companion</string>
    <string name="find_pet_sitters">Find Pet Sitters</string>
    <string name="my_bookings">My Bookings</string>
    <string name="map_placeholder">[Map View - Coming Soon]</string>
    <string name="sitter_on_the_way">Sitter on the way</string>
    <string name="two_min_away">2 min away</string>
    <string name="destination_petcare">Destination: Your Home</string>
    <string name="sitter_profile">Sitter Profile</string>
    <string name="john_smith">John Smith</string>
    <string name="cancel">Cancel</string>
    <string name="call_sitter">Call Sitter</string>
    <string name="send_message">Send message</string>
    <string name="send">Send</string>
    <string name="is_pet_safe">Is pet safe?</string>
    <string name="use_back_door">Use back door</string>
    <string name="photo_of_pet">Photo of pet</string>
    <string name="finding_your_sitter">Finding your Sitter</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="animal_bunny">Bunny</string>
    <string name="animal_hamster">Hamster</string>
    <string name="create_a_pet_profile">Create a pet profile!</string>

    <string name="sym_add_hint">Describe the symptom</string>
    <string name="sym_add_dialog_title">Add another symptom</string>
    <string name="sym_add_dialog_add">Add symptom</string>

    <string name="emergency_find_pet_care_title">Emergency Pet Care</string>
    <string name="title_activity_emergency_find_pet_care">Emergency Pet Care</string>

    <string name="select_animal_type">Select animal type</string>
    <string name="animal_dog">Dog</string>
    <string name="animal_cat">Cat</string>
    <string name="animal_other">Other</string>

    <string name="find_pet_care_title">Find Pet Care</string>
    <string name="select_pet">Select your Pet</string>
    <string name="what_tasks_needed">What kind of emergency tasks are needed? (Select all that apply)</string>
    <string name="task_dropoff">Pet Drop-off</string>
    <string name="task_onsite_checkup">On-site Checkup</string>
    <string name="task_medication">Medication</string>
    <string name="task_transport">Emergency Transport</string>

    <string name="what_symptoms">What symptoms is your pet experiencing? (Select all that apply)</string>
    <string name="sym_lethargy">Lethargy/Weakness</string>
    <string name="sym_vomit">Vomiting/Diarrhea</string>
    <string name="sym_breathing">Breathing Issues</string>
    <string name="sym_injury">Injury/Trauma</string>
    <string name="sym_seizure">Seizure</string>
    <string name="sym_other">+</string>

    <string name="location">Location</string>
    <string name="pickup_location_hint">Pickup Location</string>
    <string name="current_location_default">Your current location</string>
    <string name="destination_optional_hint">Destination (Optional)</string>
    <string name="additional_notes_optional">Additional Notes (Optional)</string>
    <string name="notes_placeholder">e.g., Buddy has been coughing for an hour and seems restless.</string>
    <string name="request_emergency_care">Request Emergency Care</string>
    <string name="don_t_have_an_account_sign_up_here"><u>Don\'t have an account? Sign up here!</u></string>
    <string name="already_have_an_account_log_in_here"><u>Already have an account? Log in here!</u></string>
    <string name="onpaw">OnPaw</string>
    <string name="display_name">Display Name:</string>
    <string name="enter_a_display_name">Enter a display name</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="i_am_a_pet_owner">I am a Pet Owner</string>
    <string name="i_am_a_pet_sitter">I am a Pet Sitter</string>
    <string name="i_have_an_emergency">I have an emergency!</string>
    <string name="log_out">Log Out</string>
    <string name="plus">+</string>
    <string name="sitter_login">Sitter Login</string>
    <string name="sitter_signup">Sitter Sign Up</string>
    <string name="dont_have_sitter_account"><u>Don\'t have a sitter account? Sign up here!</u></string>
</resources>