<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text = "@string/settings"
            android:textSize="50sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/user_icon"
            android:focusable="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name of user"
        android:hint="@string/enter_your_name"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"
        android:paddingTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email of user"
        android:hint="@string/enter_your_email"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="24sp"
        android:paddingTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Phone number of user"
        android:hint="@string/enter_your_phone_number"
        android:textSize="20sp"
        android:inputType="phone"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="5dp"/>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:queryHint="Address"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            tools:ignore="UselessParent">

            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/reset"
                android:textSize="20sp"/>

            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/save"
                android:textSize="20sp"/>

            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:maxWidth="320dp"
                android:text="@string/delete_account"
                android:textSize="20sp"/>

            <Button
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/go_back"
                android:paddingVertical="20dp"
                android:textSize="20sp"/>



        </LinearLayout>

    </RelativeLayout>




</LinearLayout>