<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_brown"
    android:padding="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:src="@drawable/paw"
            android:contentDescription="@string/user_icon"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text = "@string/profile"
            android:textSize="50sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name of user"
        android:hint="@string/enter_pet_name"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        android:textSize="24sp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/pet_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name of user"
        android:hint="@string/enter_pet_species"
        android:textSize="20sp"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />


<!--    <Spinner-->
<!--        android:id="@+id/pet_species"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:background="@color/pastel_gray"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="24sp"
        android:paddingTop="16dp"/>

    <EditText
        android:id="@+id/pet_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Phone number of user"
        android:hint="@string/pet_age"
        android:textSize="20sp"
        android:inputType="number"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="5dp"/>

    <EditText
        android:id="@+id/pet_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints="Enter a note..."
        android:hint="@string/enter_a_note"
        android:padding="5dp"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:layout_weight="1"
        android:background="@color/pastel_gray"
        />



    <Button
        android:id="@+id/pet_reset_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/pastel_blue"
        android:text="@string/reset"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/pet_save_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/pastel_blue"
        android:text="@string/save"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/pet_delete_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="320dp"
        android:backgroundTint="@color/pastel_blue"
        android:text="@string/delete_profile"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/pet_go_back_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/cardview_dark_background"
        android:layout_marginVertical="20dp"
        android:text="@string/go_back"
        android:paddingVertical="20dp"
        android:textSize="20sp"/>








</LinearLayout>